[package]
name = "restful-rust"
version = "0.1.0"
authors = ["blurbyte <info@blurbyte.com>"]
edition = "2018"
description = "Straightforward RESTful API example in Rust."
license = "MIT"

[dependencies]
warp = "0.2.0"
tokio = { version = "0.2.9", features = ["macros"] }
serde = { version = "1.0.104", features = ["derive"] }
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4.8"
pretty_env_logger = "0.3.1"

[dev-dependencies]
serde_json = "1.0.44"
serde_test = "1.0.104"
